--- a/PA_VSCode/platformio.ini
+++ b/PA_VSCode/platformio.ini
@@ -12,6 +12,27 @@
 platform = teensy
 board = teensy40
 framework = arduino
-monitor_speed = 115200
+#monitor_speed = 115200
 monitor_filters = send_on_enter, time
 build_flags = -D USB_DUAL_SERIAL
+
+build_type = debug
+; See https://github.com/platformio/platform-teensy/issues/65
+build_unflags = -DUSB_SERIAL
+debug_port = /dev/tty.usbmodem_Port3
+debug_tool = custom
+debug_load_mode = manual
+debug_server = 
+debug_init_cmds =
+  target extended-remote $DEBUG_PORT
+  $INIT_BREAK
+  define pio_reset_run_target
+  interrupt
+  tbreak loop
+  continue
+  end
+  define pio_restart_target
+  echo Restart is undefined for now.
+  end
+
+debug_init_break =
