--- a/PowerAnalyzer_V2/platformio.ini
+++ b/PowerAnalyzer_V2/platformio.ini
@@ -16,3 +16,5 @@ monitor_speed = 115200
 monitor_filters = send_on_enter, time
 monitor_port = /dev/cu.usbmodem_Port3
 build_flags = -D USB_DUAL_SERIAL
+
+lib_deps = adafruit/Adafruit BusIO@^1.13.2
