--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "PowerAnalyzer_V2/lib/Adafruit_SSD1327"]
 	path = PowerAnalyzer_V2/lib/Adafruit_SSD1327
 	url = https://github.com/adafruit/Adafruit_SSD1327
+[submodule "PowerAnalyzer_V2/lib/Adafruit_BusIO"]
+	path = PowerAnalyzer_V2/lib/Adafruit_BusIO
+	url = https://github.com/adafruit/Adafruit_BusIO
