--- a/PowerAnalyzer_V2/platformio.ini
+++ b/PowerAnalyzer_V2/platformio.ini
@@ -17,4 +17,7 @@ monitor_filters = send_on_enter, time
 monitor_port = /dev/cu.usbmodem_Port3
 build_flags = -D USB_DUAL_SERIAL
 
-lib_deps = adafruit/Adafruit BusIO@^1.13.2
+lib_deps = 
+    adafruit/Adafruit BusIO@^1.13.2
+    adafruit/Adafruit GFX Library @ ^1.11.3
+    adafruit/Adafruit SSD1327 @ ^1.0.2
